# crudcrud

./: .ccignore  .gitignore  .replit  LICENSE.md  README.md  crud_router.py  main.py  pyproject.toml  replit.nix  requirements.txt  test.db
attached_assets/: Pasted--workspace-python-m-pytest-te-1740078748967.txt
crudcrud/: __init__.py  crud.py  crud_router.py  exceptions.py
tests/: conftest.py  test_crud.py  test_crud_router.py
