[tool.poetry]
name = "crudcrud"  # Package name on PyPI - MUST be unique
version = "0.1.1"    # Initial version - use semantic versioning (MAJOR.MINOR.PATCH)
description = "A simple CRUD library built with FastAPI and SQLModel."  # Short description
authors = ["Kevin Saltarelli <kevinqz@gmail.com>"]  # Replace with your info
readme = "README.md"  #  Add a README.md! (See step 3)
license = "MIT"  # Choose a license (MIT is a good, permissive choice)
homepage = "https://github.com/simbolico/crudcrud"  # Replace with your repo URL
repository = "https://github.com/simbolico/crudcrud"  # Replace with your repo URL
keywords = ["fastapi", "sqlmodel", "crud", "api", "database"] # Help people find your package
classifiers = [  #  Help categorize your package
    "Development Status :: 3 - Alpha",  # Or Beta, etc.
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", # Match your license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10", # Specify supported versions
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.112.0"
uvicorn = {version = "^0.23.2", extras = ["standard"]} # recommended to add the standard extras.
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0" # for coverage testing
httpx = "*"  #  Needed for testing FastAPI apps
twine = "^6.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"